# build-pretty

./: Cargo.toml  README.md  rustfmt.toml
examples/might_be_complete/: Cargo.toml  build.rs
examples/might_be_safe_panic/: Cargo.toml  build.rs
locales/: en.yml  ja-JP.yml
src/: build_pretty_error.rs  build_type_string.rs  command_builder.rs  lib.rs  task.rs  task_fn.rs
